Edited wiki page DESCRIPTION through web user interface.

--- a/wiki/DESCRIPTION.wiki
+++ b/wiki/DESCRIPTION.wiki
@@ -18,7 +18,7 @@ The setup file used to create the python package.
 
 ==DESCRIPTION.txt==
 
-This file in RestructuredText.
+This file in `RestructuredText`.
 
 ==start_crawl.py==
 
