--- a/wiki/DESCRIPTION.wiki
+++ b/wiki/DESCRIPTION.wiki
@@ -18,7 +18,7 @@ The setup file used to create the python package.
 
 ==DESCRIPTION.txt==
 
-This file in `RestructuredText`.
+This file in !RestructuredText.
 
 ==start_crawl.py==
 
@@ -46,7 +46,7 @@ The top-most module that is used to run the Pytomo tool.
 }}}     
 ====Functions====
     
-  * *compute_stats(url)* Return a list of the statistics related to the url. The contents of the list are : (url, cache_url, current_stats) where current_stats is a list containing: [`Ping_times, download_statistics, DNS resolver used` ]
+  * *compute_stats(url)* Return a list of the statistics related to the url. The contents of the list are : (url, cache_url, current_stats) where current_stats is a list containing: [!Ping_times, download_statistics, DNS resolver used ]
 
   * *format_stats(stats)* Functions used to format the stats obtained from compute_stats function so that they can be inserted into the sqlite3 database. The stats are converted into a tuple. The arguments to this function is the list returned by compute_stats().
 
@@ -235,28 +235,28 @@ The columns of the database are as follows:
   * Service     - The website on which the analysis is performed.
                             Example: Youtube, Megavideo.
   * Url         - The url of the webpage.
-  * `CacheUrl`    - The Url of the cache server hosting the video.
+  * !CacheUrl    - The Url of the cache server hosting the video.
   * IP          - The IP address of the cache server from which the 
                 video is downloaded.
   * Resolver    - The DNS resolver used to get obtain the IP address 
                 of the cache server.
                             Example Google DNS, Local DNS
-  * DownloadTime     - The Time taken to download the video sample
+  * !DownloadTime     - The Time taken to download the video sample
                              (We do not download the entire video but only for a limited download time.)
-  * VideoDuration - The actual duration of the complete video.
-  * VideoLength     - The length(in bytes) of the complete video.
-  * EncodingRate     - The encoding rate of the video. 
-  * DownloadBytes - The length of the video sample(in bytes).
-  * DownloadInterruptions -  Nb of interruptions experienced during the
+  * !VideoDuration - The actual duration of the complete video.
+  * !VideoLength     - The length(in bytes) of the complete video.
+  * !EncodingRate     - The encoding rate of the video. 
+  * !DownloadBytes - The length of the video sample(in bytes).
+  * !DownloadInterruptions -  Nb of interruptions experienced during the
                                download.
-  * BufferingDuration     -  Accumulate time spend in buffering state
-  * PlaybackDuration     - Accumulate time spend in playing state.
-  * BufferDurationAtEnd     - The buffer length at the end of download.
-  * PingMin     - The minimum recorded ping time to the resolved IP 
+  * !BufferingDuration     -  Accumulate time spend in buffering state
+  * !PlaybackDuration     - Accumulate time spend in playing state.
+  * !BufferDurationAtEnd     - The buffer length at the end of download.
+  * !PingMin     - The minimum recorded ping time to the resolved IP 
                 address of the cache server.
-  * PingAvg     - The average recorded ping time to the resolved IP 
+  * !PingAvg     - The average recorded ping time to the resolved IP 
                 address of the cache server.
-  * PingMax     - The maximum recorded ping time to the resolved IP 
+  * !PingMax     - The maximum recorded ping time to the resolved IP 
                 address of the cache server.
     
 ==results/==
