--- a/wiki/DESCRIPTION.wiki
+++ b/wiki/DESCRIPTION.wiki
@@ -267,5 +267,5 @@ This folder contains the result files. The results in these file are listed in t
 ==External Links==
 
 1. [http://rg3.github.com/youtube-dl/ Youtube Download.]
-# [http://packages.debian.org/sid/python-kaa-metadata Kaa Metadata Python Package.]
-# [http://pypi.python.org/pypi/dnspython DNS Python Package.]
+2. [http://packages.debian.org/sid/python-kaa-metadata Kaa Metadata Python Package.]
+3. [http://pypi.python.org/pypi/dnspython DNS Python Package.]
