--- a/wiki/DESCRIPTION.wiki
+++ b/wiki/DESCRIPTION.wiki
@@ -4,7 +4,7 @@
   * Version: 0.1.0 
   * Copyright: GPLv2
 
-Table of Contents
+Table of Contents:
  <wiki:toc max_depth="1" />
 
 =Description=
@@ -142,7 +142,7 @@ Youtube links and to store it for next round of the crawl.
 
 *Usage*
     Terminal: 
-        lib_cache_url.py *[*-w out_file*]* *[*-p 10*]* *[*-u 2*]* *[*-V*]* url_file_in
+        lib_cache_url.py `[`-w out_file`]` `[`-p 10`]` `[`-u 2`]` `[`-V`]` url_file_in
                 
     Interactive python:
 {{{
