--- a/wiki/Readme.wiki
+++ b/wiki/Readme.wiki
@@ -55,7 +55,8 @@ Mac OS X, but for these OS the _python call is preferred_.
 
 = External Resources =
 
-We based the lib_youtube_download on `YouTube Download` script: we simplified it at most and include only the classes we needed (and only YouTube video retrieval).
+We based the lib_youtube_download on `YouTube Download` script: we simplified
+it at most and include only the classes we needed (and only `YouTube` video retrieval).
 
 The dns module is taken from the `DNS Python Package`: we just modified rdata so that Pyinstaller include all needed modules.
 
