--- a/wiki/Readme.wiki
+++ b/wiki/Readme.wiki
@@ -51,7 +51,7 @@ In order to provide installation-free package, we provide binary stand-alone
 
 The binaries files were generated with Pyinstaller (version 1.5RC1).
 We also provide binary stand-alone executables for Linux (32 and 64bits), and
-Mac OS X, but for these OS the _python call is preferred_.
+Mac OS X, but for these OS the *python call is preferred*.
 
 = External Resources =
 
